--- a/index.html
+++ b/index.html
@@ -1,60 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Trend YJKA - Official Site</title>
-    <style>
-        body {
-            font-family: system-ui, sans-serif;
-            background: #020617;
-            color: #e5e7eb;
-            margin: 0;
-            padding: 40px;
-            text-align: center;
-        }
-        .card {
-            max-width: 700px;
-            margin: 0 auto;
-            background: #020617;
-            border-radius: 16px;
-            padding: 24px;
-            border: 1px solid #1f2937;
-            box-shadow: 0 0 40px rgba(0,0,0,.6);
-        }
-        h1 {
-            font-size: 28px;
-            margin-bottom: 8px;
-        }
-        p {
-            font-size: 14px;
-            line-height: 1.6;
-            color: #9ca3af;
-        }
-        a {
-            color: #38bdf8;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .links {
-            margin-top: 20px;
-            font-size: 13px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Trndye – TikTok Integration Demo</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: #0d0d0d;
+        color: white;
+        text-align: center;
+    }
+    header {
+        padding: 25px;
+        font-size: 26px;
+        font-weight: bold;
+        background: #111;
+        box-shadow: 0 0 10px #000;
+    }
+    .container {
+        margin-top: 80px;
+    }
+    .btn {
+        background: #ff0050;
+        padding: 14px 30px;
+        color: white;
+        text-decoration: none;
+        border-radius: 8px;
+        font-size: 20px;
+    }
+    .btn:hover {
+        opacity: 0.8;
+    }
+    .pages {
+        margin-top: 60px;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+    }
+    .small-btn {
+        padding: 12px 18px;
+        background: #222;
+        color: white;
+        border-radius: 6px;
+        text-decoration: none;
+    }
+</style>
 </head>
+
 <body>
-<div class="card">
-    <h1>Trend YJKA</h1>
-    <p>A personal TikTok analytics and content management tool used by the owner of this account.</p>
-    <p>
-        The app analyzes TikTok video performance (views, likes, engagement, timing) and helps optimize content strategy.
-        It uses the official TikTok APIs for authentication and analytics.
-    </p>
-    <div class="links">
-        <a href="/privacy.html">Privacy Policy</a> ·
-        <a href="/terms.html">Terms of Service</a>
+<header>Trndye – TikTok Developer Demo</header>
+
+<div class="container">
+    <h2>Welcome to Trndye</h2>
+    <p>This demo shows how TikTok Login & Analytics will integrate with the platform.</p>
+
+    <a href="dashboard.html" class="btn">Login with TikTok</a>
+
+    <div class="pages">
+        <a href="dashboard.html" class="small-btn">Dashboard</a>
+        <a href="analytics.html" class="small-btn">Analytics</a>
+        <a href="profile.html" class="small-btn">Profile</a>
     </div>
 </div>
+
 </body>
 </html>
