--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         text-align: center;
     }
     header {
+        <a href="login.html">
+    <button style="
+        margin-top:20px;
+        padding:12px 25px;
+        background:#238636;
+        color:#fff;
+        border:none;
+        border-radius:6px;
+        cursor:pointer;
+        font-size:16px;">
+        Login
+    </button>
+</a>
+
         padding: 25px;
         font-size: 26px;
         font-weight: bold;
